--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3183,7 +3183,7 @@ VGO TEL:
 
 # Vivo (vivo.com.cn, vivo.com)
 Vivo:
-  regex: '((?:VIV-|BBG-)?(?<!FBCR/|NOA )vivo(?!(?:Browser)))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[3469][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|V2006|1819|V201[12]A|V202[0345]C?A|V202[235-9]|V205[479]A|V203[0235-8]|V2031[E]?A?|V203[46]A|V204[013]|V204[6789]A|V20(6[158]|99|5[56]|66[B]?|7[23]|80)A|V2046|X50 Pro\+|I1927|I2012|V206[156]|V205[08]|V2043_21|I1928|V2069|V21[12]1A)(?:[);/ ]|$)'
+  regex: '((?:VIV-|BBG-)?(?<!FBCR/|NOA )vivo(?!(?:Browser)))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[3469][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|V2006|1819|V201[12]A|V2085A|V202[0345]C?A|V202[235-9]|V205[479]A|V203[0235-8]|V2031[E]?A?|V203[46]A|V204[013]|V204[6789]A|V20(6[158]|99|5[56]|66[B]?|7[23]|80)A|V2046|X50 Pro\+|I1927|I2012|V206[156]|V205[08]|V2043_21|V213[346]A|V214[13]A|I1928|V2069|V21[12]1A|V2106A|V2123A)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'V1824[B]?A(?:[);/ ]|$)'
@@ -3222,10 +3222,18 @@ Vivo:
       model: 'iQOO U1x'
     - regex: 'V2061A(?:[);/ ]|$)'
       model: 'iQOO U3'
+    - regex: 'V2143A(?:[);/ ]|$)'
+      model: 'iQOO U3x'
+    - regex: 'V2106A(?:[);/ ]|$)'
+      model: 'iQOO U3x 5G'
     - regex: 'V2024A(?:[);/ ]|$)'
       model: 'iQOO 5'
     - regex: 'V2025A(?:[);/ ]|$)'
       model: 'iQOO 5 Pro'
+    - regex: 'V2136A(?:[);/ ]|$)'
+      model: 'iQOO 8'
+    - regex: 'V2141A(?:[);/ ]|$)'
+      model: 'iQOO 8 Pro'
     - regex: '(?:V2025)(?:[);/ ]|$)'
       model: 'V20'
     - regex: '(?:V2066)(?:[);/ ]|$)'
@@ -3362,10 +3370,16 @@ Vivo:
       model: 'X50 Pro Plus'
     - regex: 'V20(?:46|59)A(?:[);/ ]|$)'
       model: 'X60'
+    - regex: 'V2085A(?:[);/ ]|$)'
+      model: 'X60t'
     - regex: '(?:V2047A|V2046)(?:[);/ ]|$)'
       model: 'X60 Pro'
     - regex: 'V2056A(?:[);/ ]|$)'
       model: 'X60 Pro Plus'
+    - regex: 'V2134A(?:[);/ ]|$)'
+      model: 'X70 Pro'
+    - regex: 'V2133A(?:[);/ ]|$)'
+      model: 'X70'
     - regex: 'X9Plus(?:[);/ ]|$)'
       model: 'X9 Plus'
     - regex: 'vivo Xplay6(?:[);/ ]|$)'
@@ -3432,7 +3446,7 @@ Vivo:
       model: 'Y53i'
     - regex: 'vivo 1606a(?:[);/ ]|$)'
       model: 'Y53'
-    - regex: '(?:V2058|V2111A)(?:[);/ ]|$)'
+    - regex: '(?:V2058|V2111A|V2123A)(?:[);/ ]|$)'
       model: 'Y53s'
     - regex: 'vivo 1603(?:[);/ ]|$)'
       model: 'Y55l'
