--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -3778,3 +3778,21 @@
     model: Honor Pad 6 10.1" WiFi
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; BAH2-W09; HMSCore 6.1.0.313) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.93 HuaweiBrowser/11.1.4.301 Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Huawei Browser
+    version: 11.1.4.301
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tablet
+    brand: Huawei
+    model: MediaPad M5 Lite
+  os_family: Android
+  browser_family: Unknown
